--- a/monitoring/package.json
+++ b/monitoring/package.json
@@ -4,6 +4,7 @@
   "description": "A microservice to manage academic monitoring system",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thiago R Bassetto",
