--- a/reports/package.json
+++ b/reports/package.json
@@ -10,6 +10,7 @@
   "author": "Thiago R Bassetto",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
