--- a/monitoring/package.json
+++ b/monitoring/package.json
@@ -17,6 +17,7 @@
     "pg": "^7.10.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "nodemon": "^1.19.0"
   }
 }
