--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   "author": "Thiago R Bassetto",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": ">=0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1"
