--- a/monitoring_ui/package.json
+++ b/monitoring_ui/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "dotenv": "^8.0.0",
     "firebase": "^6.0.4",
+    "firebaseui": "^4.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
