--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "firebase": "^6.1.1",
     "vue": "^2.6.10",
