--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve --host localhost",
+    "build": "vue-cli-service build --port $PORT"
   },
   "dependencies": {
     "axios": "^0.19.0",
