us23 & minor fixes

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,12 +1,12 @@
+# build
 FROM node:8.6-alpine
-
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
 COPY package.json ./
 RUN npm install
-
 COPY . .
 
-# EXPOSE 3000
-CMD ["npm", "run", "build"]
+RUN npm run build
+
+# production
+CMD ["npm", "run", "start"]
