--- a/web/package.json
+++ b/web/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host localhost",
-    "build": "vue-cli-service build --port $PORT"
+    "build": "vue-cli-service build",
+    "start": "node server.js --port $PORT"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
     "firebase": "^6.1.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
